fixing image size on mobile

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -34,12 +34,19 @@
 }
 
 .profile-img {
-  height: 8rem;
-  width: 8rem;
+  height: 120px;
+  width: 120px;
   border-radius: 50%;
   box-shadow: 0px ​0px 35px -10px #ccc;
   -webkit-box-shadow: 0px ​0px 35px -10px #ccc;
   -moz-box-shadow: 0px ​0px 35px -10px #ccc;
+}
+
+@media (max-width: 460px) {
+  .profile-img {
+    height: 80px;
+    width: 80px;
+  }
 }
 
 .work-phrase::after {
